<resources>
    <string name="app_name">Lab5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ellipse">Еліпс</string>
    <string name="action_rectangle">Прямокутник</string>
    <string name="action_point">Точка</string>
    <string name="action_line">Лінія</string>
    <string name="action_cube">Куб</string>
    <string name="action_section">Відрізок</string>
    <string name="action_table">Таблиця</string>

</resources>